[gd_scene load_steps=4 format=3 uid="uid://bxy3d0ht4k0cg"]

[ext_resource type="Script" uid="uid://bl0u4ksbn2dfj" path="res://scripts/main_menu.gd" id="1_l6cm7"]

[sub_resource type="Gradient" id="Gradient_06t4h"]
colors = PackedColorArray(2.34637e-07, 0.196215, 0.216809, 1, 0.281894, 0.460522, 0.330195, 1)
metadata/_snap_enabled = true
metadata/_snap_count = 2

[sub_resource type="GradientTexture2D" id="GradientTexture2D_7vrkn"]
gradient = SubResource("Gradient_06t4h")
fill_from = Vector2(0.114679, 0.100917)
fill_to = Vector2(1, 1)

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6cm7")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_7vrkn")

[node name="title_label" type="Label" parent="."]
custom_minimum_size = Vector2(400, 100)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -76.5
offset_right = 76.5
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "RNG Ruined My Life"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -22.0
offset_right = 4.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="start_game_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="settings_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="credits_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="exit_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"
